Fix app link wrapping

--- a/democracy/page/default_home/css/default_home.css
+++ b/democracy/page/default_home/css/default_home.css
@@ -263,6 +263,7 @@
 
 #secondbadge {
   overflow: visible;
+  min-width: max-content;
 }
 
 #video-title {
